pygments false (not use python)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         redcarpet
-pygments:         true
+pygments:         false
 
 # Permalinks
 permalink:        pretty
@@ -20,3 +20,6 @@ author:
 version:          1.0.0
 github:
   repo:           https://github.com/poole/poole
+
+#highlight
+highlighter:      rouge
