--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         redcarpet
-pygments:         false
+highlighter: rouge
 
 # Permalinks
 permalink:       /posts/:year/:month/:day/:title
