--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url:              http://menikdp.github.io
 paginate:         5
 baseurl:          /
 author:
-  name:           Menik Damayanti Pratiwi
+  name:           Menik Damayanti P
   url:            https://twitter.com/_menikdp
   email:          menik.damayanti.p@gmail.com
 
