--- a/_config.yml
+++ b/_config.yml
@@ -1,76 +1,92 @@
-
 # ===== jekyll default
 # Where things are
-source: .
+source:      .
 destination: ./_site
-plugins: ./_plugins
-layouts: ./_layouts
+plugins:     ./_plugins
+layouts:     ./_layouts
 data_source: ./_data
 collections: null
+
 # Handling Reading
-safe: false
-include: [".htaccess"]
-exclude: ["Gemfile", "Gemfile.lock", "Rakefile", "lib/tasks/*"]
-keep_files: [".git", ".svn"]
-encoding: "utf-8"
+safe:         false
+include:      [".htaccess"]
+exclude:      ["Gemfile", "Gemfile.lock", "Rakefile", "lib/tasks/*"]
+keep_files:   [".git", ".svn"]
+encoding:     "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-textile_ext: "textile"
+textile_ext:  "textile"
+
 # Plugins
 whitelist: []
-gems: []
+gems:      []
+
 # Conversion
-markdown: kramdown
+markdown:    kramdown
 highlighter: pygments
-lsi: false
+lsi:         false
 excerpt_separator: "\n\n"
+
 # Serving
-detach: false
-port: 4000
-host: 0.0.0.0
+detach:  false
+port:    4000
+host:    0.0.0.0
 baseurl: "" # does not include hostname
+
 # Filtering Content
 show_drafts: null
 limit_posts: 0
-future: true
+future:      true
 unpublished: false
+
 # Backwards-compatibility
 relative_permalinks: false
+
 # Outputting
-permalink: date
+permalink:     date
 paginate_path: /page:num
-timezone: null
-quiet: false
+timezone:      null
+
+quiet:    false
 defaults: []
+
 # Markdown Processors
 maruku:
-use_tex: false
-use_divs: false
-png_engine: blahtex
-png_dir: images/latex
-png_url: /images/latex
-fenced_code_blocks: true
+  use_tex:    false
+  use_divs:   false
+  png_engine: blahtex
+  png_dir:    images/latex
+  png_url:    /images/latex
+  fenced_code_blocks: true
+
 rdiscount:
-extensions: []
+  extensions: []
+
 redcarpet:
-extensions: []
+  extensions: []
+
 kramdown:
-auto_ids: true
-footnote_nr: 1
-entity_output: as_char
-toc_levels: 1..6
-smart_quotes: lsquo,rsquo,ldquo,rdquo
-use_coderay: false
-coderay:
-coderay_wrap: div
-coderay_line_numbers: inline
-coderay_line_number_start: 1
-coderay_tab_width: 4
-coderay_bold_every: 10
-coderay_css: style
+  auto_ids:      true
+  footnote_nr:   1
+  entity_output: as_char
+  toc_levels:    1..6
+  smart_quotes:  lsquo,rsquo,ldquo,rdquo
+  use_coderay:   false
+
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
+
 redcloth:
-hard_breaks: true
+  hard_breaks: true
+
 # ===== end jekyll default
+
 # ===== this block will override jekyll default config
+
 # Site settings
 title: My Own Ruby
 email: menik.damayanti.p@gmail.com
@@ -79,26 +95,35 @@ baseurl: ""
 url: "http://menikdp.github.io"
 twitter_username: _menikdp
 github_username: menikdp
+
 # Build settings
 markdown: kramdown
 permalink: /articles/:year/:month/:day/:title
+
 # DRY
 defaults:
--
-scope:
-path: ""
-type: "posts"
-values:
-layout: "default"
-scope:
-path: "pages"
-type: "pages"
-values:
-layout: "default"
+  -
+    scope: 
+      path: ""
+      type: "posts"
+    values:
+      layout: "default"
+    scope: 
+      path: "pages"
+      type: "pages"
+    values:
+      layout: "default"
+
+
 sass:
-sass_dir: _sass
-style: :compressed
+  sass_dir: _sass
+  style: :compressed
 coffee:
-style: :compressed
+  style: :compressed
+
 paginate: 15
 paginate_path: /articles/:num
+
+
+
+# ends here
