--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ excerpt_separator: "\n\n"
 detach:  false
 port:    4000
 host:    0.0.0.0
-baseurl: "" # does not include hostname
+baseurl: "/" # does not include hostname
 
 # Filtering Content
 show_drafts: null
