--- a/_data/links.yml
+++ b/_data/links.yml
@@ -16,3 +16,6 @@ winjekyll:
 devkit:
   label: devkit
   href: http://rubyinstaller.org/downloads/
+joshualande:
+  label: joshualande
+  href: http://joshualande.com/jekyll-github-pages-poole/
