add google verify

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -19,3 +19,6 @@ devkit:
 joshualande:
   label: joshualande
   href: http://joshualande.com/jekyll-github-pages-poole/
+codecademy:
+  label: codecademy
+  href: http://codecademy.com
